Add date range activity totals report
